--- a/pom.xml
+++ b/pom.xml
@@ -5,27 +5,114 @@
   <artifactId>computer-database</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
-  <name>computer-database Maven Webapp</name>
-  <url>http://maven.apache.org</url>
+  <name>computer-database</name>
+  
+  <properties>
+  
+  	<assertj.version>2.0.0</assertj.version>
+  	<bonecp.version>0.8.0.RELEASE</bonecp.version>
+  	<dbunit.version>2.5.0</dbunit.version>    
+  	<h2database.version>1.4.186</h2database.version>
+  	<java.version>1.8</java.version>
+  	<javax.servlet.version>3.1.0</javax.servlet.version>
+  	<jsp-api.version>2.2</jsp-api.version>
+	<jstl.version>1.2</jstl.version>
+  	<junit.version>4.12</junit.version>
+  	<jsp-api.version>2.2</jsp-api.version>
+	<jstl.version>1.2</jstl.version>
+	<logback.version>1.1.2</logback.version>
+  	<mockito.version>1.10.19</mockito.version>
+  	<mysql.version>5.1.34</mysql.version>  
+    <slf4j.version>1.7.10</slf4j.version>
+    
+  </properties>
+  
   <dependencies>
+  
+	<!--  Servlet  -->
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+     	 <groupId>javax.servlet</groupId>
+     	 <artifactId>javax.servlet-api</artifactId>
+     	 <version>${javax.servlet.version}</version>
+      	<scope>provided</scope>
     </dependency>
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
-      <version>3.1.0</version>
-      <scope>provided</scope>
-    </dependency>
+    
+    <!-- Views -->
+	<dependency>
+	 	<groupId>javax.servlet.jsp</groupId>
+		<artifactId>jsp-api</artifactId>
+		<version>${jsp-api.version}</version>
+		<scope>runtime</scope>
+	</dependency>
+	<dependency>
+		<groupId>javax.servlet</groupId>
+		<artifactId>jstl</artifactId>
+		<version>${jstl.version}</version>
+		<scope>runtime</scope>
+	</dependency>
+    
+    <!--  MySQL Driver  -->
     <dependency>
 		<groupId>mysql</groupId>
 		<artifactId>mysql-connector-java</artifactId>
-		<version>5.1.6</version>
+		<version>${mysql.version}</version>
+		<scope>runtime</scope>
 	</dependency>
+	
+	<!-- Connection Pool -->
+	<dependency>
+		<groupId>com.jolbox</groupId>
+		<artifactId>bonecp</artifactId>
+		<version>${bonecp.version}</version>
+	</dependency>
+	
+	<!--  Test  -->
+	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>${junit.version}</version>
+		<scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-all</artifactId>
+        <version>${mockito.version}</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.assertj</groupId>
+        <artifactId>assertj-core</artifactId>
+        <version>${assertj.version}</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>com.h2database</groupId>
+        <artifactId>h2</artifactId>
+        <version>${h2database.version}</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.dbunit</groupId>
+        <artifactId>dbunit</artifactId>
+        <version>${dbunit.version}</version>
+        <scope>test</scope>
+    </dependency>
+
+    <!-- Logging -->
+    <dependency>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-api</artifactId>
+		<version>${slf4j.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>ch.qos.logback</groupId>
+		<artifactId>logback-classic</artifactId>
+		<version>${logback.version}</version>
+		<scope>runtime</scope>
+	</dependency>
+  
   </dependencies>
+  
   <build>
     <finalName>computer-database</finalName>
     <plugins>
@@ -33,8 +120,8 @@
     		<groupId>org.apache.maven.plugins</groupId>
     		<artifactId>maven-compiler-plugin</artifactId>
     		<configuration>
-    			<source>1.8</source>
-    			<target>1.8</target>
+    			<source>${java.version}</source>
+    			<target>${java.version}</target>
     		</configuration>
     	</plugin>
     </plugins>
