--- a/pom.xml
+++ b/pom.xml
@@ -22,13 +22,30 @@
 	<jstl.version>1.2</jstl.version>
 	<logback.version>1.1.2</logback.version>
   	<mockito.version>1.10.19</mockito.version>
-  	<mysql.version>5.1.34</mysql.version>  
+  	<mysql.version>5.1.34</mysql.version> 
+  	<selenium.version>2.45.0</selenium.version> 
     <slf4j.version>1.7.10</slf4j.version>
     
   </properties>
   
   <dependencies>
   
+  	<!--  Spring  -->
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-web</artifactId>
+        <exclusions>
+            <exclusion>
+                <groupId>commons-logging</groupId>
+                <artifactId>commons-logging</artifactId>
+            </exclusion>
+        </exclusions>
+    </dependency>
+
 	<!--  Servlet  -->
     <dependency>
      	 <groupId>javax.servlet</groupId>
@@ -74,6 +91,12 @@
 		<scope>test</scope>
     </dependency>
     <dependency>
+		<groupId>org.seleniumhq.selenium</groupId>
+		<artifactId>selenium-firefox-driver</artifactId>
+		<version>${selenium.version}</version>
+		<scope>test</scope>
+	</dependency>
+    <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-all</artifactId>
         <version>${mockito.version}</version>
@@ -99,11 +122,11 @@
     </dependency>
 
     <!-- Logging -->
-    <dependency>
-		<groupId>org.slf4j</groupId>
-		<artifactId>slf4j-api</artifactId>
-		<version>${slf4j.version}</version>
-	</dependency>
+     <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>jcl-over-slf4j</artifactId>
+        <version>${slf4j.version}</version>
+    </dependency>
 	<dependency>
 		<groupId>ch.qos.logback</groupId>
 		<artifactId>logback-classic</artifactId>
@@ -112,6 +135,27 @@
 	</dependency>
   
   </dependencies>
+  
+  <!--  Spring Bill of Materials -->
+  <dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-framework-bom</artifactId>
+            <version>4.1.6.RELEASE</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+    </dependencies>
+  </dependencyManagement>
+  
+  <repositories>
+    <repository>
+        <id>io.spring.repo.maven.release</id>
+        <url>http://repo.spring.io/release/</url>
+        <snapshots><enabled>false</enabled></snapshots>
+    </repository>
+  </repositories>
   
   <build>
     <finalName>computer-database</finalName>
