--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
   	<mockito.version>1.10.19</mockito.version>
   	<mysql.version>5.1.34</mysql.version> 
   	<selenium.version>2.45.0</selenium.version> 
-    <slf4j.version>1.7.10</slf4j.version>
+    	<slf4j.version>1.7.10</slf4j.version>
     
   </properties>
   
@@ -45,6 +45,18 @@
             </exclusion>
         </exclusions>
     </dependency>
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-jdbc</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-tx</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-test</artifactId>
+	</dependency>
 
 	<!--  Servlet  -->
     <dependency>
@@ -119,6 +131,12 @@
         <artifactId>dbunit</artifactId>
         <version>${dbunit.version}</version>
         <scope>test</scope>
+	<exclusions>
+		<exclusion>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</exclusion>
+	</exclusions>
     </dependency>
 
     <!-- Logging -->
