--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,7 +1,15 @@
-url=jdbc:mysql://localhost:3306/computer-database-db?zeroDateTimeBehavior=convertToNull
-user=root
-password=root
-driver=com.mysql.jdbc.Driver
-minConnectionsPerPartition=5
-maxConnectionsPerPartition=10
-partitionCount=2
+dev.url=jdbc:mysql://localhost:3306/computer-database-db?zeroDateTimeBehavior=convertToNull
+dev.user=root
+dev.password=root
+dev.driver=com.mysql.jdbc.Driver
+dev.minConnectionsPerPartition=5
+dev.maxConnectionsPerPartition=10
+dev.partitionCount=2
+
+test.url=jdbc:h2:mem:computer-database-db;DB_CLOSE_DELAY=-1
+test.user=sa
+test.password=
+test.driver=org.h2.Driver
+test.minConnectionsPerPartition=5
+test.maxConnectionsPerPartition=10
+test.partitionCount=1
