refactor(): JdbcTemplate done
create ComputerDAO
update ComputerDAO

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,5 +19,9 @@
 	<listener>
 	    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	
+	<listener>
+	    <listener-class>com.excilys.controller.AbstractServlet</listener-class>
+	</listener>
 
 </web-app>
