--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,10 @@
             </exclusion>
         </exclusions>
     </dependency>
+    <dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-webmvc</artifactId>
+	</dependency>
 	<dependency>
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-jdbc</artifactId>
