--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
   	<mockito.version>1.10.19</mockito.version>
   	<mysql.version>5.1.34</mysql.version> 
   	<selenium.version>2.45.0</selenium.version> 
-    	<slf4j.version>1.7.10</slf4j.version>
+   	<slf4j.version>1.7.10</slf4j.version>
     
   </properties>
   
@@ -82,7 +82,12 @@
 		<artifactId>jstl</artifactId>
 		<version>${jstl.version}</version>
 		<scope>runtime</scope>
-	</dependency>
+	</dependency><dependency>
+	<groupId>javassist</groupId>
+	<artifactId>javassist</artifactId>
+	<version>3.12.1.GA</version>
+</dependency>
+	
     
     <!--  MySQL Driver  -->
     <dependency>
