--- a/src/test/resources/config-test.properties
+++ b/src/test/resources/config-test.properties
@@ -1,7 +1,7 @@
-url=jdbc:h2:mem:computer-database-db;DB_CLOSE_DELAY=-1
-user=sa
-password=
-driver=org.h2.Driver
-minConnectionsPerPartition=5
-maxConnectionsPerPartition=10
-partitionCount=1
+test.url=jdbc:h2:mem:computer-database-db;DB_CLOSE_DELAY=-1
+test.user=sa
+test.password=
+test.driver=org.h2.Driver
+test.minConnectionsPerPartition=5
+test.maxConnectionsPerPartition=10
+test.partitionCount=1
