--- a/src/test/webapp/WEB-INF/web.xml
+++ b/src/test/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
 
 	<context-param>
 	    <param-name>contextConfigLocation</param-name>
-	    <param-value>/WEB-INF/application-context.xml</param-value>
+	    <param-value>/WEB-INF/application-test-context.xml</param-value>
 	</context-param>
 	
 	<listener>
@@ -16,12 +16,12 @@
 	</listener>
 	
 	<servlet>
-    	<servlet-name>dispatcher</servlet-name>
+    	<servlet-name>dispatcher-test</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
-        <servlet-name>dispatcher</servlet-name>
+        <servlet-name>dispatcher-test</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
