refactor(): Autowiring of Interfaces

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 dev.url=jdbc:mysql://localhost:3306/computer-database-db?zeroDateTimeBehavior=convertToNull
-dev.user=root
+dev.username=root
 dev.password=root
 dev.driver=com.mysql.jdbc.Driver
 dev.minConnectionsPerPartition=5
