--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,10 @@
   	<bonecp.version>0.8.0.RELEASE</bonecp.version>
   	<dbunit.version>2.5.0</dbunit.version>    
   	<h2database.version>1.4.186</h2database.version>
+  	<hibernate.validation.version>5.1.3.Final</hibernate.validation.version>
   	<java.version>1.8</java.version>
   	<javax.servlet.version>3.1.0</javax.servlet.version>
+  	<javax.validation.version>1.1.0.Final</javax.validation.version>
   	<jsp-api.version>2.2</jsp-api.version>
 	<jstl.version>1.2</jstl.version>
   	<junit.version>4.12</junit.version>
@@ -102,6 +104,20 @@
 		<groupId>com.jolbox</groupId>
 		<artifactId>bonecp</artifactId>
 		<version>${bonecp.version}</version>
+	</dependency>
+	
+	<!-- Bean validation -->
+	<dependency>
+		<groupId>javax.validation</groupId>
+		<artifactId>validation-api</artifactId>
+		<version>${javax.validation.version}</version>
+	</dependency>
+	
+	<!-- Bean Validation provider -->
+	<dependency>
+		<groupId>org.hibernate</groupId>
+		<artifactId>hibernate-validator</artifactId>
+		<version>${hibernate.validation.version}</version>
 	</dependency>
 	
 	<!--  Test  -->
