--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,5 +24,18 @@
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+	    
+	<error-page>
+		<error-code>403</error-code>
+		<location>/WEB-INF/views/403.jsp</location>
+	</error-page>
+	<error-page>
+	  	<error-code>404</error-code>
+	  	<location>/WEB-INF/views/404.jsp</location>
+	</error-page>
+	<error-page>
+	  	<error-code>500</error-code>
+	  	<location>/WEB-INF/views/500.jsp</location>
+	</error-page>
 
 </web-app>
