--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-test</artifactId>
 	</dependency>
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-aspects</artifactId>
+	</dependency>
+	
 
 	<!--  Servlet  -->
     <dependency>
