--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
   	<dbunit.version>2.5.0</dbunit.version>    
   	<h2database.version>1.4.186</h2database.version>
   	<hibernate.validation.version>5.1.3.Final</hibernate.validation.version>
+  	<hibernate.version>4.3.9.Final</hibernate.version>
   	<java.version>1.8</java.version>
   	<javax.servlet.version>3.1.0</javax.servlet.version>
   	<javax.validation.version>1.1.0.Final</javax.validation.version>
@@ -28,6 +29,7 @@
   	<selenium.version>2.45.0</selenium.version> 
    	<slf4j.version>1.7.10</slf4j.version>
    	<spring.version>4.1.6.RELEASE</spring.version>
+   	<querydsl.version>3.6.3</querydsl.version>
     
   </properties>
   
@@ -68,6 +70,10 @@
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-aspects</artifactId>
 	</dependency>
+		<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-orm</artifactId>
+	</dependency>
 	
 
 	<!--  Servlet  -->
@@ -90,12 +96,7 @@
 		<artifactId>jstl</artifactId>
 		<version>${jstl.version}</version>
 		<scope>runtime</scope>
-	</dependency><dependency>
-	<groupId>javassist</groupId>
-	<artifactId>javassist</artifactId>
-	<version>3.12.1.GA</version>
-</dependency>
-	
+	</dependency>	
     
     <!--  MySQL Driver  -->
     <dependency>
@@ -104,6 +105,42 @@
 		<version>${mysql.version}</version>
 		<scope>runtime</scope>
 	</dependency>
+	
+	<!--  QueryDSL  -->
+	<dependency>
+		<groupId>com.mysema.querydsl</groupId>
+		<artifactId>querydsl-apt</artifactId>
+		<version>${querydsl.version}</version>
+		<scope>provided</scope>
+	</dependency>    
+	<dependency>
+		<groupId>com.mysema.querydsl</groupId>
+		<artifactId>querydsl-jpa</artifactId>
+		<version>${querydsl.version}</version>
+	</dependency>
+	
+	<!--  Hibernate  -->
+	<dependency>
+		<groupId>org.hibernate</groupId>
+		<artifactId>hibernate-core</artifactId>
+		<version>${hibernate.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>org.hibernate</groupId>
+		<artifactId>hibernate-entitymanager</artifactId>
+		<version>${hibernate.version}</version>
+	</dependency>
+		<dependency>
+<groupId>org.hibernate.javax.persistence</groupId>
+<artifactId>hibernate-jpa-2.0-api</artifactId>
+<version>1.0.1.Final</version>
+</dependency>
+<!-- 	<dependency> -->
+<!-- 		<groupId>org.hibernate</groupId> -->
+<!-- 		<artifactId>hibernate-ehcache</artifactId> -->
+<!-- 		<version>${hibernate.version}</version> -->
+<!-- 	</dependency>  -->
+	
 	
 	<!-- Connection Pool -->
 	<dependency>
@@ -170,7 +207,7 @@
 	</exclusions>
     </dependency>
 
-    <!-- Logging -->
+    <!-- Logging --> 
      <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>jcl-over-slf4j</artifactId>
@@ -213,10 +250,26 @@
     		<groupId>org.apache.maven.plugins</groupId>
     		<artifactId>maven-compiler-plugin</artifactId>
     		<configuration>
-    			<source>${java.version}</source>
-    			<target>${java.version}</target>
+				<source>${java.version}</source>
+				<target>${java.version}</target>
     		</configuration>
     	</plugin>
+    	<plugin>
+			<groupId>com.mysema.maven</groupId>
+			<artifactId>apt-maven-plugin</artifactId>
+			<version>1.1.3</version>
+			<executions>
+				<execution>
+					<goals>
+						<goal>process</goal>
+		            </goals>
+		            <configuration>
+		                <outputDirectory>target/generated-sources/java</outputDirectory>
+		                <processor>com.mysema.query.apt.jpa.JPAAnnotationProcessor</processor>
+		            </configuration>
+	       		</execution>
+	   		 </executions>
+		</plugin>
     </plugins>
   </build>
 </project>
