--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -8,13 +8,14 @@
 
 	<context-param>
 	    <param-name>contextConfigLocation</param-name>
-	    <param-value>/WEB-INF/application-context.xml</param-value>
+	    <param-value>/WEB-INF/application-context.xml /WEB-INF/security-context.xml</param-value>
 	</context-param>
 	
 	<listener>
 	    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 	
+	<!-- Spring MVC  -->
 	<servlet>
     	<servlet-name>dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -24,7 +25,24 @@
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
-	    
+	   
+	<!--  Spring Security  -->    
+	
+	<!--  Constraints a user’s single connexion to the application  -->
+	<!--  Keeps Spring Security updated about session lifecycle  -->
+<!-- 	<listener> -->
+<!-- 		<listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class> -->
+<!-- 	</listener> -->
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+		    
+	<!--  Error pages  -->    
 	<error-page>
 		<error-code>403</error-code>
 		<location>/WEB-INF/views/403.jsp</location>
