--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<module>service</module>
 		<module>console</module>
 		<module>webapp</module>
+		<module>webservice</module>
 		
  	</modules>
   
@@ -177,6 +178,11 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>webapp</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>webservice</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 	 
