--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 	  	<hibernate.validation.version>5.1.3.Final</hibernate.validation.version>
 	  	<hibernate.version>4.3.8.Final</hibernate.version>
 	  	<java.version>1.8</java.version>
+	  	<javax.el-api.version>3.0.0</javax.el-api.version>
 	  	<javax.servlet.version>3.1.0</javax.servlet.version>
 	  	<javax.validation.version>1.1.0.Final</javax.validation.version>
 	  	<jsp-api.version>2.2</jsp-api.version>
@@ -263,6 +264,12 @@
 	     	 <version>${javax.servlet.version}</version>
 	      	<scope>provided</scope>
 	    </dependency>
+	    
+	    <dependency>
+<groupId>javax.el</groupId>
+<artifactId>javax.el-api</artifactId>
+<version>${javax.el-api.version}</version>
+</dependency>
 		
 		<!-- Bean validation --> 
 		<dependency>
