feat(): console refactor + Jackson

--- a/console/pom.xml
+++ b/console/pom.xml
@@ -23,6 +23,10 @@
 			<artifactId>webservice</artifactId>
 		</dependency>
 	
+		<dependency>
+			<groupId>javax.el</groupId>
+			<artifactId>javax.el-api</artifactId>
+		</dependency>
 	</dependencies>
 	
 </project>
