--- a/pom.xml
+++ b/pom.xml
@@ -27,10 +27,12 @@
 	  	<h2database.version>1.4.186</h2database.version>
 	  	<hibernate.validation.version>5.1.3.Final</hibernate.validation.version>
 	  	<hibernate.version>4.3.8.Final</hibernate.version>
+	  	<jackson.version>2.5.3</jackson.version>
 	  	<java.version>1.8</java.version>
 	  	<javax.el-api.version>3.0.0</javax.el-api.version>
 	  	<javax.servlet.version>3.1.0</javax.servlet.version>
 	  	<javax.validation.version>1.1.0.Final</javax.validation.version>
+	  	<jaxb-api.version>2.2.12</jaxb-api.version>
 	  	<jsp-api.version>2.2</jsp-api.version>
 		<jstl.version>1.2</jstl.version>
 	  	<junit.version>4.12</junit.version>
@@ -74,6 +76,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
+			
 		</dependency>
 		  
   		<!-- Spring Security -->
@@ -229,9 +232,14 @@
 			<artifactId>spring-aspects</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-			<dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-oxm</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
 
@@ -265,12 +273,25 @@
 	      	<scope>provided</scope>
 	    </dependency>
 	    
+	    	<!-- REST -->
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>${jaxb-api.version}</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+	    
 	    <dependency>
-<groupId>javax.el</groupId>
-<artifactId>javax.el-api</artifactId>
-<version>${javax.el-api.version}</version>
-</dependency>
-		
+			<groupId>javax.el</groupId>
+			<artifactId>javax.el-api</artifactId>
+			<version>${javax.el-api.version}</version>
+		</dependency>
+	    
 		<!-- Bean validation --> 
 		<dependency>
 			<groupId>javax.validation</groupId>
