refactor(): pom parent

--- a/binding/pom.xml
+++ b/binding/pom.xml
@@ -6,8 +6,8 @@
 
 	<parent>
 		<groupId>com.excilys</groupId>
-		<artifactId>computerDB</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<artifactId>computer-database</artifactId>
+		<version>1.0.0-RELEASE</version>
 	</parent>
 	
 	<dependencies>
