--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -6,8 +6,8 @@
 	  
 	<parent>
 		<groupId>com.excilys</groupId>
-	    <artifactId>computerDB</artifactId>
-	    <version>0.0.1-SNAPSHOT</version>
+		<artifactId>computer-database</artifactId>
+		<version>1.0.0-RELEASE</version>
 	</parent>
 	  
 	<dependencies>
@@ -49,5 +49,16 @@
 		</dependency>
 		
 	</dependencies>
+	
+	<build>
+	 
+		<plugins>
+			<plugin>
+				<groupId>com.mysema.maven</groupId>
+				<artifactId>apt-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
+	
 
 </project>
