--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -7,8 +7,8 @@
 
 	<parent>
 		<groupId>com.excilys</groupId>
-		<artifactId>computerDB</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<artifactId>computer-database</artifactId>
+		<version>1.0.0-RELEASE</version>
 	</parent>
 	
 	<dependencies>
@@ -28,12 +28,6 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
-			<exclusions>
-				<exclusion>
-					<groupId>commons-logging</groupId>
-					<artifactId>commons-logging</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -55,5 +49,14 @@
 		</dependency>
 		
 	</dependencies>
+	
+	<build>
+	 
+		<plugins>
+			<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 	
 </project>
