--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -57,6 +57,11 @@
 			<artifactId>spring-webmvc</artifactId>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+		</dependency>
+		
 	</dependencies>
 	
 	<build>
